...
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical"
            android:fadeScrollbars="false">

            <LinearLayout
                android:id="@+id/cities_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </ScrollView>

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Log Out" />

            <Button
                android:id="@+id/buttonAddLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add a location" />
        </LinearLayout>

    </LinearLayout>
...
