...
        android:text="Search for a City"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/autocomplete_fragment"
        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/selected_city_text"
        app:layout_constraintTop_toBottomOf="@+id/selected_city_text">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:visibility="gone"
            tools:visibility="visible" />

...
